Fixed the years-list having extra padding around the left, right, and bottom, which caused the menu to stay open longer when the mouse leaves the menu.

--- a/src/heat.js.scss
+++ b/src/heat.js.scss
@@ -361,7 +361,7 @@ div.heat-js {
             @include down-arrow( 6px, 9px, false, calc( var(--heat-js-spacing) / 2 ) );
 
             div.years-list {
-                padding: $year-margin;
+                padding-top: $year-margin;
                 display: none;
                 position: absolute;
                 width: 80px;
